testsuite/tests/typing-short-paths/pr5918.compilers.reference
Characters 136-146:
   let _ = { a = () }
           ^^^^^^^^^^
Error: Some record fields are undefined: b

